small changes to all events, added calendar

--- a/bootstrap-4.3.1/css/custom.css
+++ b/bootstrap-4.3.1/css/custom.css
@@ -31,7 +31,7 @@ a.text-white:hover, a.text-white:focus {
 }
 
 .bg-skin_astable_background {
-    background-color: #ccb790 !important;
+    background-color: #ecdec0 !important;
 }
 
 .rounded-top50 {
