--- a/bootstrap-4.3.1/css/custom.css
+++ b/bootstrap-4.3.1/css/custom.css
@@ -255,3 +255,7 @@ h7, .h7 {
 select option[value="providedCulture"]   {
     background-image:url("https://image.ibb.co/mEtRZq/culture.png");
 }
+
+.pointer {
+    cursor:pointer;
+}
