--- a/bootstrap-4.3.1/css/custom.css
+++ b/bootstrap-4.3.1/css/custom.css
@@ -19,7 +19,7 @@ a.text-white:hover, a.text-white:focus {
 }
 
 .text-gray {
-    color: #5a6268; !important;
+    color: #5a6268 !important;
 }
 
 /*body {
