--- a/bootstrap-4.3.1/css/custom.css
+++ b/bootstrap-4.3.1/css/custom.css
@@ -263,3 +263,25 @@ select option[value="providedCulture"]   {
 .pointer {
     cursor:pointer;
 }
+
+.text-quest_completed {
+    color: #a89587 !important;
+}
+
+.text-prepare {
+    color: #a12f2f !important;
+}
+
+.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
+background-color: #f8c891!important;
+}
+
+.custom-checkbox .custom-control-input:checked:focus ~ .custom-control-label::before {
+box-shadow: 0 0 0 1px #b9761e, 0 0 0 0.2rem rgba(0, 255, 0, 0.25)
+}
+.custom-checkbox .custom-control-input:focus ~ .custom-control-label::before {
+box-shadow: 0 0 0 1px #d67e19, 0 0 0 0.2rem rgba(0, 0, 0, 0.25)
+}
+.custom-checkbox .custom-control-input:active ~ .custom-control-label::before {
+background-color: #b9881e;
+}
