--- a/bootstrap-4.3.1/css/custom.css
+++ b/bootstrap-4.3.1/css/custom.css
@@ -285,3 +285,23 @@ box-shadow: 0 0 0 1px #d67e19, 0 0 0 0.2rem rgba(0, 0, 0, 0.25)
 .custom-checkbox .custom-control-input:active ~ .custom-control-label::before {
 background-color: #b9881e;
 }
+
+
+
+@media screen and (min-width: 1030px) {
+    .navbar-nav > li.bigSpacing{
+        padding-left:50px;
+        padding-right:50px;
+      }
+}
+
+@media screen and (min-width: 1230px) {
+    .navbar-nav > li.bigSpacing{
+        padding-left:100px;
+        padding-right:100px;
+    }
+}
+
+.navbar-nav > li {
+    margin-bottom: -5px;
+}
