--- a/bootstrap-4.3.1/css/custom_v2.css
+++ b/bootstrap-4.3.1/css/custom_v2.css
@@ -334,6 +334,10 @@ background-color: #b9881e;
     background-image: linear-gradient(to top right,#ecdec0, #ffffff) !important;
 }
 
+.bg-right_bar_background {
+    background-image: linear-gradient(to left,#fef8ec, #ecdec0) !important;
+}
+
 .midcontainer { width: 300px; height: 250px; display:block; margin:auto;  }
 .midcontainer2 { display:none; margin:auto; }
 .top-ad2{display:none;}
