ck header css fixing

--- a/bootstrap-4.3.1/css/custom_v3.css
+++ b/bootstrap-4.3.1/css/custom_v3.css
@@ -672,3 +672,7 @@ background-color: #b9881e;
     font-weight: bold;
 }
 /* KONIEC - COMMUNITY KNOWLEDGE - TOMÁŠKO */
+
+.text-center { 
+    text-align: center; 
+}
