--- a/bootstrap-4.3.1/css/custom_v3.css
+++ b/bootstrap-4.3.1/css/custom_v3.css
@@ -688,5 +688,5 @@ background-color: #b9881e;
 /* TOMES */
 
 .bg-tomes_background {
-    background-color: #f0e9fa !important;
+    background-color: #d1ccb2 !important;
 }
