Start with the city planner promo - add first layouts to chapters 6 and 24

--- a/bootstrap-4.3.1/css/custom_v3.css
+++ b/bootstrap-4.3.1/css/custom_v3.css
@@ -6,6 +6,11 @@
     color: #7a5e49 !important;
 }
 
+.text-link-bold {
+    color: #7a5e49 !important;
+    font-weight: bold;
+}
+
 .text-orange {
     color: #fc7f25 !important;
 }
